# vocalis

./: .gitignore  README.md  config.yaml  pyproject.toml  readme-speaker-id.md  requirements.txt  setup.ps1  setup.sh
node-red-contrib-vocalis/: README.md  package.json  vocalis-ask.html  vocalis-ask.js  vocalis-config.html  vocalis-config.js  vocalis-say.html  vocalis-say.js  vocalis-wake-trigger.html  vocalis-wake-trigger.js
scripts/: create_and_test_alfred.py  download_models.py  enroll_speaker.py  record_and_enroll.py  run_wakeword.py  test_mic_scores.py  validate_ws.py
tests/: test_vocalis.py
vocalis/: __init__.py  api.py  audio.py  config.py  main.py  ml_workers.py  orchestrator.py  state.py
